[#4939] Fix dark mode styling for narrative journal blocks
Closes #4939

--- a/less/v2/dark/journal.less
+++ b/less/v2/dark/journal.less
@@ -20,7 +20,7 @@
 
   .roll-link > i.fa-dice-d20, a.inline-roll > i.fa-dice-d20 { filter: invert(1); }
 
-  .fvtt:is(.quest, .advice) { background: var(--dnd5e-color-blue-gray-4); }
+  .fvtt:is(.advice, .narrative, .quest) { background: var(--dnd5e-color-blue-gray-4); }
 
   aside.notable {
     border-color: #212121;
